// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./HnBanner.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="banner"
      role="button"
      style="cursor: pointer;"
    >
      <div
        class="flex flex-row gap-4 bannerStack"
      >
        <img
          alt="Guardian badge"
          class="bannerImage"
          data-nimg="1"
          decoding="async"
          height="95"
          loading="lazy"
          src="/images/hypernative/guardian-badge.svg"
          style="color: transparent;"
          width="95"
        />
        <div
          class="bannerContent"
        >
          <h4
            class="m-0 scroll-m-20 text-xl font-semibold leading-6 tracking-normal bannerText bannerTitle"
            data-slot="typography"
            data-variant="h4"
          >
            Enforce enterprise-grade security
          </h4>
          <div
            class="m-0 text-sm leading-5 font-normal bannerText bannerDescription"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Automatically monitor and block risky transactions using advanced, user-defined security policies, powered by
             
            <span
              style="color: rgb(0, 180, 96); font-weight: bold;"
            >
              Hypernative
            </span>
            .
          </div>
          <button
            class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] [&_svg:not([class*='size-'])]:size-4 inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none hover:bg-muted hover:text-foreground dark:hover:bg-muted/50 aria-expanded:bg-muted aria-expanded:text-foreground h-8 gap-1 px-4 in-data-[slot=button-group]:rounded-sm has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 bannerCtaText"
            data-slot="button"
            tabindex="0"
            type="button"
          >
            Learn more
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        class="closeButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x size-6 closeIcon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`./HnBanner.stories NonDismissable 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="banner"
      role="button"
      style="cursor: pointer;"
    >
      <div
        class="flex flex-row gap-4 bannerStack"
      >
        <img
          alt="Guardian badge"
          class="bannerImage"
          data-nimg="1"
          decoding="async"
          height="95"
          loading="lazy"
          src="/images/hypernative/guardian-badge.svg"
          style="color: transparent;"
          width="95"
        />
        <div
          class="bannerContent"
        >
          <h4
            class="m-0 scroll-m-20 text-xl font-semibold leading-6 tracking-normal bannerText bannerTitle"
            data-slot="typography"
            data-variant="h4"
          >
            Enforce enterprise-grade security
          </h4>
          <div
            class="m-0 text-sm leading-5 font-normal bannerText bannerDescription"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Automatically monitor and block risky transactions using advanced, user-defined security policies, powered by
             
            <span
              style="color: rgb(0, 180, 96); font-weight: bold;"
            >
              Hypernative
            </span>
            .
          </div>
          <button
            class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] [&_svg:not([class*='size-'])]:size-4 inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none hover:bg-muted hover:text-foreground dark:hover:bg-muted/50 aria-expanded:bg-muted aria-expanded:text-foreground h-8 gap-1 px-4 in-data-[slot=button-group]:rounded-sm has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 bannerCtaText"
            data-slot="button"
            tabindex="0"
            type="button"
          >
            Learn more
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
